public class Main{
public static void main(String[]args){
    System.out.println("Hola soy una compañia de transportes");
}
}