@startuml
class MedioDeTransporte {
- ArrayList<ObjetoTransportable> trasportables
- double capacidadMaxima
- double capacidadActual
- Dimension dimensiones
- int CapacidadMaximaDeObjetos
+ ArrayList<ObjetoTransportable> getTrasportables()
+ void setTrasportables(ArrayList<ObjetoTransportable>)
+ double getCapacidadMaxima()
+ void setCapacidadMaxima(double)
+ double getCapacidadActual()
+ void setCapacidadActual(double)
+ Dimension getDimensiones()
+ void setDimensiones(Dimension)
+ int getCapacidadMaximaDeObjetos()
+ void setCapacidadMaximaDeObjetos(int)
}
class ObjetoTransportable {
- double peso
- Dimension dimensiones
- Boolean esFragil
- String nombre
+ double getPeso()
+ void setPeso(double)
+ Dimension getDimensiones()
+ void setDimensiones(Dimension)
+ Boolean getEsFragil()
+ void setEsFragil(Boolean)
+ String getNombre()
+ void setNombre(String)
}
class Main {
+ {static} void main(String[])
}
class Silla {
- int cantidadDePatas
}
class Dimension {
- double profundidad
- double alto
- double ancho
+ double getProfundidad()
+ void setProfundidad(double)
+ double getAlto()
+ void setAlto(double)
+ double getAncho()
+ void setAncho(double)
}
class Televisor {
- String estaEmpaquetada
}


ObjetoTransportable <|-- Silla
ObjetoTransportable <|-- Televisor
@enduml